chore: resolved issues with demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Salte Auth Demo</title>
+  <title>@salte-auth/bitbucket • Demo</title>
 </head>
 
 <body>
-  <script src="./index.ts"></script>
+  <script src="./bitbucket.js"></script>
 </body>
 
 </html>
